...
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="8dp"
            android:background="@color/colorPrimary_baseball"
            android:onClick="ball"
            android:text="Ball"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/strike_button"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="8dp"
            android:background="@color/colorPrimary_baseball"
            android:onClick="strike"
            android:text="Strike"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/hit_button"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="8dp"
            android:background="@color/colorPrimary_baseball"
            android:onClick="hit"
            android:text="Hit"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/score_button"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
...
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="8dp"
            android:background="@color/colorPrimary_baseball"
            android:onClick="out"
            android:text="Player Out"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>

