...
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="8dp"
            android:background="@color/colorPrimary_baseball"
            android:onClick="goToBaseballActivity"
            android:padding="16dp"
            android:text="Baseball"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
...
